2010-02-04  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_event_update.c
	(cerebrod_event_modules_setup): Fix bug which did not allow
	multiple events.
	
2010-02-04  Albert Chu  <chu11@llnl.gov>
	
	* man/cerebro_module_devel.3.in: Fix typo.
	
2010-02-01  Albert Chu  <chu11@llnl.gov>

	* Update copyrights globally.
	
2009-11-04  Albert Chu  <chu11@llnl.gov>

	* Fix up comments/docs, i.e. != e.g.
	
2009-10-16  Albert Chu  <chu11@llnl.gov>

	* src/libs/wrappers/wrappers_ltdl.c, src/libs/wrappers/wrappers.h:
	Remove ltdl wrapper functions which are unused.
	
2009-10-16  Albert Chu  <chu11@llnl.gov>

	* Fix RHEL6/FC11 build issues.
	
2009-08-11  Albert Chu  <chu11@llnl.gov>

	* Include headers to fix portability.
	
2009-05-19  Albert Chu  <chu11@llnl.gov>

	* src/libs/common/hash.h, src/libs/common/hash.c (hash_remove_if):
	New function.

	* src/cerebrod/cerebrod_util.c (cerebrod_rehash): Fix rehash
	corner case.
	
2009-05-15  Albert Chu  <chu11@llnl.gov>

        * Add comments for clarification.

2009-02-26  Albert Chu  <chu11@llnl.gov>

	* etc/cerebrod: By default, do not have cerebrod on.
	
	* META, NEWS: update for release

	* tagged cerebro-1-9-1

2009-01-12  Albert Chu  <chu11@llnl.gov>

	* META, NEWS: update for release

	* tagged cerebro-1-8-1

2008-12-05  Albert Chu  <chu11@llnl.gov>

	* cerebro.spec.in: Change default to not build with genders
	support.
	
2008-09-15  Albert Chu  <chu11@llnl.gov>
	
	* META, NEWS: update for release

	* tagged cerebro-1-7-1

2008-09-10  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_monitor_update.h,
	src/cerebrod/cerebrod_monitor_update.c: Fix list corruption race.
	
2008-07-11  Albert Chu  <chu11@llnl.gov>

	* src/libs/common/hostlist.c: Update to newest lib.
	
2008-06-27  Albert Chu  <chu11@llnl.gov>

	* man/Makefile.am: Fix make dist.

	* META, NEWS: update for release

	* tagged cerebro-1-6-1
	
2008-06-25  Albert Chu  <chu11@llnl.gov>

	* src/cerebrod/cerebrod_speaker.c (_speaker_initialize): Fix fd
	race.